# Sherlock-purple-agent

./: README.md  SETUP_COMPLETE.md  amber-manifest.json5  pyproject.toml
src/: agent.py  server.py
